tests/ui/err/has-no-argument.rs
#[logfn::logfn]
fn f() {}

fn main() {}
